--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PaginaSobrando">Pagina Extra</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CadastroDeConta" asp-action="Index">catrastro de conta</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-danger" asp></a>
+                        </li>
                     </ul>
                 </div>
             </div>
