--- a/Views/Emprestimo/AdicionarEmprestimo.cshtml
+++ b/Views/Emprestimo/AdicionarEmprestimo.cshtml
@@ -17,6 +17,6 @@
     <span asp-validation-for="Livro"></span><br/>
 
 
-<button type="submit" class="btn btn-outline-warning">Adociomar</button>
+<button type="submit" class="btn btn-outline-warning">Adiciomar</button>
     <a class="btn btn-outline-primary text-black" asp-controller="Emprestimo"asp-action="Index">Voltar</a>
 </form>
